syntax = "proto3";

package pb_user;

message cs_user_login_hall {
  int32 ab = 1;
  string account = 2;
  string password = 3;
  string deviceCode = 4;
  int32 deviceType = 5;
}

message sc_user_login_hall {
  int32 uid = 1;
  string name = 2;
  int64 money = 3;
  int32 userLevel = 4;
  int32 vipLevel = 5;
  int64 userExp = 6;
  string session = 7;
  int32 logoId = 8;
  int64 vipExp = 9;
  string lan = 10;
  string phoneNo = 11;
  string areaCode = 12;
  int32 bFirstRecharge = 13;
  int32 bBindSourceId = 14;
  string RealName = 15;
  string Email = 16;
}

message cs_user_session_login {
  int32 uid = 1;
  string deviceCode = 2;
  string session = 3;
}

message notify_userinfo_update {
  int64 money = 1;
  int64 bankMoney = 2;
  int32 vipLevel = 3;
  int64 vipExp = 4;
  string name = 5;
  int32 logoId = 6;
  int32 type = 7;
  int64 changed = 8;
  string phoneNo = 9;
  string areaCode = 10;
}

message notify_user_recharge_result_info {
  int32 firstRecharge = 1;
  int64 rechargeCoins = 2;
  int64 rechargeCash = 3;
}

message cs_regist_account {
  string account = 1;
  string password = 2;
  string deviceCode = 3;
  int32 deviceType = 4;
  int32 registerType = 5;
  string lan = 6;
  int32 sourceUserId = 7;
  int32 sourceChannel = 8;
}

message sc_connect_success {
  string maxVer = 1;
  string lessVer = 2;
  string reserVe0 = 3;
  string reserVe1 = 4;
  string checkCode = 5;
}
